--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html {
 }
 
 ::selection {
-  background: b3ffff;
+  background: #fefbd8;
   text-shadow: none;
 }
 
@@ -119,6 +119,72 @@ textarea {
   /* 1 */
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #3b2f2f;
+  background-color: #d1e0e0;
+}
+
+main.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px;
+}
+
+main.content img {
+  max-width: 90%;
+  height: auto;
+  margin-top: 10px;
+}
+
+button {
+  background-color: #ffcc99;
+  color: #006699;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #00008B;
+}
+
+button.clicked {
+  background-color: #cce6ff;
+}
+
+#message {
+  margin-top: 25px;
+  font-size: 1.2rem;
+  min-height: 40px;
+  transition: opacity 0.5s ease;
+  opacity: 0;
+}
+#message.show {
+  opacity: 1;
+}
+
+footer {
+   text-align: center;
+   font-size: 0.8rem;
+   color: #DCDCDC;
+   padding: 15px 0;
+   background-color: #999;
+   width: 100%;
+   position: sticky;
+   bottom: 0;
+ }
 /*
  * Extends the .visually-hidden class to allow the element
  * to be focusable when navigated to via the keyboard:
