--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,19 @@ body {
   background-color: #d1e0e0;
 }
 
+
+.weather-box {
+  background: white;
+  border-radius: 20px; /* ✅ rounded corners */
+  padding: 12px;
+  width: 280px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  margin: 16px auto;
+}
+
+
+
+
 main.content {
   flex: 1;
   display: flex;
@@ -136,13 +149,13 @@ main.content {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 50px;
+  padding: 30px;
 }
 
 main.content img {
   max-width: 90%;
   height: auto;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 button {
@@ -150,7 +163,7 @@ button {
   color: #006699;
   border: none;
   padding: 12px 24px;
-  border-radius: 30px;
+  border-radius: 50px;
   cursor: pointer;
   font-size: 1.1rem;
   transition: all 0.3s ease;
