--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ main.content img {
 }
 
 button {
-  background-color: #ffcc99;
+  background-color: #009999;
   color: #006699;
   border: none;
   padding: 12px 24px;
